Maven release 1.0